--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!--Corpo-->
 
-    <main>
+        <div class="container">
             <section id="sec1">
                 <h1>
                     Evolua sua forma de viver.
@@ -60,7 +60,7 @@
                 <hr>
                 <a href="#"><button>Matricule-se já!</button></a>
 
-                    <div class="container">
+                    <div class="container-2">
                        
                         <div class="texto-1">
                             <h2 class="texto-h2">Porque nos escolher?</h2>
@@ -97,7 +97,7 @@
 
         <section id="sec2">
 
-            <div class="all-cards container">
+            <div class="all-cards container-2">
                 <div class="cards">
                     <p>Ceilândia</p>
                     <div class="unidades"><img src="./css/unidade-1.jpg" alt="">
@@ -133,7 +133,7 @@
 
         </section>
 
-        <section id="sec3" class="container">
+        <section id="sec3" class="container-2">
             <div class="text-card">
                 <div class="title-card">
                     <h2>PLANOS<br>RECORRÊNCIA<br>
@@ -298,6 +298,8 @@
             </ul>
         </div>
     </footer>
+        </div>
+            
 </body>
 <script src="script.js"></script>
 
