--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <!--Cabeçalho-->
 
     <header class="">
@@ -63,8 +62,6 @@
                     <div class="container-2">
                        
                         <div class="texto-1">
-                            <h2 class="texto-h2">Porque nos escolher?</h2>
-        
                             <p class="p-texto">
                                 Porque <br>
                                 nos <br>
@@ -82,7 +79,7 @@
                         </div>
                         <div id="texto-2" class="texto-2">
                             <video id="video" class="video"
-                                src="./css/Halteres para academia em casa_ review de 3 versões, nacionais e importadas.mp4"
+                                src="./css/academia-video.mp4"
                                 poster="./css/academia.jpg"></video>
                             <div id="controler" class="none">
                                 <img id="retroceder" src="./css/retroceder.png" alt="">
@@ -97,7 +94,7 @@
 
         <section id="sec2">
 
-            <div class="all-cards container-2">
+            <div class="all-cards">
                 <div class="cards">
                     <p>Ceilândia</p>
                     <div class="unidades"><img src="./css/unidade-1.jpg" alt="">
@@ -133,10 +130,11 @@
 
         </section>
 
-        <section id="sec3" class="container-2">
+        <section id="sec3" class="">
             <div class="text-card">
                 <div class="title-card">
-                    <h2>PLANOS<br>RECORRÊNCIA<br>
+                    <h2>Planos
+                    <br>RECORRÊNCIA<br>
                     </h2>
                     <h2>BENEFÍCIOS</h2>
                 </div>
