--- a/index.html
+++ b/index.html
@@ -62,20 +62,23 @@
                     <div class="container-2">
                        
                         <div class="texto-1">
-                            <p class="p-texto">
-                                Porque <br>
-                                nos <br>
-                                escolher?
-                            </p>
-                            <p>
-                                Porque somos um convite para transformar a<br>
-                                forma com que você enxerga a atividade física.<br>
-                                <br>
-                                Estrutura tecnológica, excelentes localidades e <br>
-                                profissionais apaixonados pelo que fazem.<br>
-                                Apesar de tudo isso, nosso diferencial está no<br>
-                                respeito a sua diversidade.
-                            </p>
+                            <div class="p-texto">
+                                <p>Porque<br>
+                                    nos<br>
+                                    escolher?</p>
+                            </div>
+                            <div>
+                                <p>
+                                    Porque somos um convite para transformar a<br>
+                                    forma com que você enxerga a atividade física.<br>
+                                    <br>
+                                    Estrutura tecnológica, excelentes localidades e <br>
+                                    profissionais apaixonados pelo que fazem.<br>
+                                    Apesar de tudo isso, nosso diferencial está no<br>
+                                    respeito a sua diversidade.
+                                </p>
+                            </div>
+                            
                         </div>
                         <div id="texto-2" class="texto-2">
                             <video id="video" class="video"
@@ -133,9 +136,8 @@
         <section id="sec3" class="">
             <div class="text-card">
                 <div class="title-card">
-                    <h2>Planos
-                    <br>RECORRÊNCIA<br>
-                    </h2>
+                    <h2>Planos</h2>
+                    <h2>RECORRÊNCIA</h2>
                     <h2>BENEFÍCIOS</h2>
                 </div>
 
