--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 </div>
                 <div id="texto-2" class="texto-2">
-                    <video id="video" class="video" src="./css/academia-video.mp4"></video>
+                    <video id="video" class="video" src="./css/images-index/academia-video.mp4"></video>
                     <div id="controler" class="none">
                         <img id="retroceder" src="./css/images-index/retroceder.png" alt="">
                         <img id="avancar" src="./css/images-index/avancar.png" alt="">
