--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 
             <div class="nav-list">
                 <ul>
-                    <li><a href="./login.html" target="_blank">Login</a></li>
+                    <li><a href="./login.html">Login</a></li>
                     <li><a href="#sec3">Planos</a></li>
                     <li><a href="#sec2">Unidades</a></li>
                     <li><a href="./index.html">Início</a></li>
