--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="nav-list">
                 <ul>
-                    <li><a href="./login.html">Login</a></li>
+                    <li><a href="./login.html" >Login</a></li>
                     <li><a href="#sec3">Planos</a></li>
                     <li><a href="#sec2">Unidades</a></li>
                     <li><a href="./index.html">Início</a></li>
@@ -45,8 +45,6 @@
                     <li><a href="#sec3">Planos</a></li>
                     <hr>
                     <li><a href="./login.html">Login</a></li>
-
-
                 </ul>
             </div>
 
@@ -61,7 +59,7 @@
                 Evolua sua forma de viver.
             </h1>
             <hr>
-            <a href="#"><button>Matricule-se já!</button></a>
+            <a href="matricula.html" target="_blank"><button>Matricule-se já!</button></a>
 
             <div class="container">
                 <div class="texto-1">
