--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 
             <div class="nav-list">
                 <ul>
-                    <li><a href="./login.html">Login</a></li>
+                    <li><a href="./login.html" >Login</a></li>
                     <li><a href="#sec3">Planos</a></li>
                     <li><a href="#sec2">Unidades</a></li>
                     <li><a href="./index.html">Início</a></li>
@@ -69,10 +69,10 @@
 
             <div class="login-texto">
                 <a href="#">Esqueceu a senha?</a>
-                <a href="#">Cadastre-se</a>
+                <a href="matricula.html" target="_blank">Cadastre-se</a>
             </div>
 
-            <p class="ou">Ou</p>
+            <p class="ou">Or</p>
 
             <div class="meios-login">
                 <ul>
